# geog599

./: .gitignore  README.md  notes.txt
cad/: gimbal1.fcstd  gimbal1.fcstd1  gimble.html  mount_bracket_bottom.fcstd  mount_bracket_bottom.fcstd1  scanner.dxf  scanner.dxf~  scanner2.dxf  scanner2.dxf~  scanner3.dxf~  scanner3_2.dxf~  scanner_driven.dxf  scanner_driven.dxf~  scanner_driver.dxf  scanner_driver.dxf~  scanner_mount.dxf  scanner_package.dxf  scanner_package.txt  scanner_package_imp.dxf  scanner_package_sample.dxf  skelly_bracket.dxf  skelly_cap.dxf  skelly_enc_mount.dxf
cad/scripts/: cycloid.py
circuits/: circuit1.fzz
classes/500b/papers/: 500b.tex  500b_methods.tex  outline.txt
classes/500b/papers/images/: point_clouds.py
classes/500b/scripts/classification/: cart_classifier.py
classes/500b/scripts/dynamics/: index.html
client/planner/: package-lock.json  package.json  webpack.config.js
client/planner/src/: main.js
controller/: .gitignore  CMakeLists.txt  config.dox
controller/include/ds/: Octree.hpp
controller/include/geog599/: ConcaveHull.hpp  PointSorter.hpp  PointSource.hpp  ProfilePointSource.hpp  TrajectoryPlanner.hpp
controller/include/math/: RBFSmoother.hpp  Util.hpp
controller/include/sensor/: ads1115.hpp  teensy.hpp
controller/src/: controller.cpp  pipeline.cpp
controller/src/platform/: djiplatform.cpp
controller/src/sensor/: ads1115.cpp  teensy.cpp
controller/src/ui/: drawconfig.hpp  profile.hpp  profileglwidget.hpp
dji/controller/src/: main.cpp
docs/: .gitignore  settings.txt
docs/geog590/: .gitignore  report.tex  settings.txt
docs/geog590/figures/: .gitignore
docs/geog599/: .gitignore  proposal.tex  report.tex
docs/geog599/scripts/: mt_doug_3.txt  quarticderiv.html
docs/geog599_proposal/: proposal.tex  report.tex
docs/geog599_proposal/scripts/: cubicderiv.html  splines.py
docs/lit_review/: lit_review.aux  lit_review.bbl  lit_review.blg  lit_review.tex
docs/thesis/: .gitignore  convert.sh  thesis.lof  thesis.lot  thesis.tex  thesis.toc
docs/thesis/chapters/1/: chapter_intro.tex
docs/thesis/chapters/2/: chapter_lit_review.tex
docs/thesis/frontmatter/: fm.tex  tp.tex
docs/thesis/macros/: use_packages.tex
experiments/controller/: .gitignore  CMakeLists.txt
experiments/controller/docs/: connectors.txt  schematic.txt
experiments/controller/include/: GeomPointFilter.hpp  HullPointFilter.hpp  Octree.hpp  PlaneFilter.hpp  PointFilter.hpp  PointSorter.hpp  PointSource.hpp  ScanPointFilter.hpp  TrajectoryPlanner.hpp  ads1115.hpp  encoder.hpp  i2c.hpp  lwsf30c.hpp  minimu9v5.hpp  serial.hpp  sf30capi.hpp
experiments/controller/include/comm/: i2c.hpp  serial.hpp
experiments/controller/include/ds/: Octree.hpp
experiments/controller/include/geog599/: ConcaveHull.hpp  GeomPointFilter.hpp  HullPointFilter.hpp  LASPointSource.hpp  PlaneFilter.hpp  PointFilter.hpp  PointSorter.hpp  PointSource.hpp  ProfilePointSource.hpp  TrajectoryPlanner.hpp
experiments/controller/include/math/: Avg.hpp  IDWSmoother.hpp  RBF.hpp  SmoothSpline.hpp  Smoother.hpp  SplineSmoother.hpp  Util.hpp
experiments/controller/include/platform/: djiplatform.hpp  platform.hpp
experiments/controller/include/sensor/: ads1115.hpp  lwsf30c.hpp  minimu9v5.hpp  teensy.hpp
experiments/controller/include/sim/: LASPointSource.hpp  TxtPointSource.hpp
experiments/controller/scripts/: graph_surface.py
experiments/controller/src/: ads1115.cpp  angle_os.c  controller.cpp  curve.cpp  encoder.cpp  geog590.cpp  geog590_2.cpp  geog599.cpp  i2c.cpp  lwsf30c.cpp  minimu9v5.cpp  minimu9v6.cpp  pipeline.cpp  serial.cpp  sf30capi.cpp
experiments/controller/src/comm/: i2c.cpp  serial.cpp
experiments/controller/src/sensor/: ads1115.cpp  lwsf30c.cpp  minimu9v5.cpp  teensy.cpp
experiments/controller/src/ui/: drawconfig.hpp  profile.cpp  profile.hpp  profile.ui  profileglwidget.hpp
experiments/laser/src/: angle.c  angle_cnt.c
experiments/opencv/: .gitignore  CMakeLists.txt
experiments/opencv/src/: sfm.cpp  showflow.cpp  showimg.cpp  showvid.cpp
experiments/pid/: index.html
experiments/simulation/: CMakeLists.txt
experiments/simulation/data/: pad_clip.tif
experiments/simulation/include/: geometry.hpp  gimbal.hpp  platform.hpp  rangefinder.hpp  surface.hpp  util.hpp
experiments/simulation/include/sim/: controller.hpp  geometry.hpp  gimbal.hpp  platform.hpp  rangefinder.hpp  simulator.hpp  terrain.hpp
experiments/simulation/src/: sim1.cpp  surface.cpp  util.cpp
experiments/simulation/src/sim/: controller.cpp  gimbal.cpp  platform.cpp  rangefinder.cpp  terrain.cpp
experiments/simulation/src/viewer/: renderwidget.cpp  renderwidget.hpp  sim1viewer.cpp  sim1viewer.hpp  sim1viewer.ui
experiments/simulator/: .gitignore  CMakeLists.txt  Doxyfile  README.md
experiments/simulator/data/: .gitignore
experiments/simulator/include/: controller.hpp  geometry.hpp  platform.hpp  rangefinder.hpp  surface.hpp  uav.hpp
experiments/simulator/src/: sim1.cpp  sim_spline.cpp  surface.cpp  util.cpp
experiments/spline/: spline.html
experiments/splines/: draw.js  index.html  index_2.html  index_deboor.html  kdtree.js  main.js  math.js  mt_doug_2.txt  pc.js  smooth_deboor.js  smooth_spline.js  splinedoc.html  uav.js
experiments/uav/: .gitignore
experiments/uav/server/: package-lock.json  package.json  ws_server.js
experiments/uav/www/: index.html  planner.css  planner.html
experiments/uav2/: sim.py
geog590/: application_notes.txt
geog590/scripts/: trajectory.py
geog590/scripts/old/: graph_output.py  graphs.py
geog599/: .gitignore  application_notes.txt
geog599/scripts/: .gitignore  index.html  plane_fmt.py  profile_extract.py  profiles.csv  range_angle.py  range_swath.py  stats.sql  trajectory.py
geog599/scripts/old/: index.html  output.csv
papers/: 500b.settings  500b.tex  500b_anot_bib.odt  500b_background.tex  500b_intro.tex  outline.txt
papers/images/: .gitignore  generate.sh  point_clouds.py
scripts/: fix_glcm_nodata.sh  stats_scrape.py  trajectory.py
scripts/classification/: cart_classifier.py  clusters.py
(+27 files in other folders)
